# halomcc-run

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.gcloud/cloudbuild/: master.yaml
.github/workflows/: docker-image.yml  rust.yml
resources/: games.csv  levels.csv  service_records.csv
resources/halo_waypoint/service_records/: halo_2_coop.html  halo_2_solo.html  halo_3_coop.html  halo_3_odst_coop.html  halo_3_odst_solo.html  halo_3_solo.html  halo_4_coop.html  halo_4_solo.html  halo_coop.html  halo_reach_coop.html  halo_reach_solo.html  halo_solo.html
src/: error.rs  main.rs  utils.rs
src/campaign_modes/: campaign_mode.rs  mod.rs
src/difficulties/: difficulty.rs
src/games/: dao.rs  game.rs  graphql.rs  mod.rs
src/graphql/: context.rs  mod.rs  query.rs  service.rs  time.rs
src/graphql/models/: campaign_mode.rs  difficulty.rs  game.rs  mission.rs  mod.rs  service_record.rs  time.rs
src/halo_waypoint/: client.rs  mod.rs
src/halo_waypoint/models/: campaign_mode.rs  difficulty.rs  fastest_time.rs  game.rs  highest_score.rs  mission_id.rs  mod.rs
src/halo_waypoint/requests/: auth.rs  mod.rs  service_record.rs
src/levels/: dao.rs  graphql.rs  level.rs  mod.rs
src/missions/: dao.rs  graphql.rs  mission.rs  mod.rs
src/missions/mission/: halo.rs  halo_2.rs  halo_3.rs  halo_3_odst.rs  halo_4.rs  halo_reach.rs
src/service_records/: dao.rs  graphql.rs  mod.rs  service_record.rs
src/utils/: mod.rs
