[package]
name = "halomcc-run"
version = "0.1.0"
authors = ["Philippe Vinchon <p.vinchon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.40"
csv = "1.1"
http = "0.2.1"
hyper = "0.13.7"
hyper-tls = "0.4.3"
juniper = { git = "https://github.com/graphql-rust/juniper.git", features = ["expose-test-schema"] }
juniper_hyper = { git = "https://github.com/graphql-rust/juniper.git" }
scraper = "0.12.0"
serde = { version = "1.0.115", features = ["derive"] }
time = "0.2.22"
tokio = { version = "0.2", features = ["full"] }
