[package]
name = "halomcc-run"
version = "0.1.0"
authors = ["Philippe Vinchon <p.vinchon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
http = "0.2.1"
hyper = "0.13.8"
hyper-tls = "0.4.3"
juniper = { git = "https://github.com/graphql-rust/juniper.git", features = ["expose-test-schema"] }
juniper_hyper = { git = "https://github.com/graphql-rust/juniper.git" }
regex = "1.4.1"
scraper = "0.12.0"
strum = "0.19.5"
strum_macros = "0.19.4"
time = "0.2.22"
ttl_cache = "0.5.1"
tokio = { version = "0.2", features = ["full"] }
